<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/pexelsbcg" />

    <LinearLayout
        android:id="@+id/LinearLayout_Login_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.45"
        android:background="@drawable/grad_cover_bg"
        android:orientation="vertical" />

    <LinearLayout
        android:id="@+id/LinearLayout_goBack_Welcome_Screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/backbtn" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="Back"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:background="@drawable/grad_button_line"
                android:hint="@string/enter_email"
                android:padding="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/mediumGray"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/grad_button_line"
                android:hint="@string/enter_password"
                android:padding="16dp"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/mediumGray"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/LinearLayout_display_error_email_pass_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/grad_error_message"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/email_error_login_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="Please enter your email address."
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="gone"/>


                <TextView
                    android:id="@+id/password_error_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="Please enter your password."
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/email_password_error_id_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="Email not registered, please sign up or check your credentials again"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:layout_marginBottom="3dp"
                    android:visibility="gone"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="280dp"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="14dp">

                <LinearLayout
                    android:id="@+id/LinearLayout_Login"
                    android:layout_width="280dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/grad_button_app"
                    android:clickable="true"
                    android:elevation="7dp"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:requiresFadingEdge="vertical"
                    android:translationX="1dp"
                    android:translationY="-2dp"
                    android:translationZ="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:id="@+id/progressBarID_login"
                        android:layout_width="25dp"
                        android:layout_height="28dp"
                        android:layout_marginStart="13dp"
                        android:elevation="2dp"
                        android:indeterminate="true"
                        android:indeterminateTint="@color/white"
                        android:visibility="gone" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <com.rey.material.widget.CheckBox
                    android:id="@+id/Remember_Me_CheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Remember me"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textStyle="bold"
                    style="@style/Material.Drawable.CheckBox"
                    app:cbd_strokeColor="@color/blue"


                    />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
            </LinearLayout>




        </LinearLayout>

    </LinearLayout>

</RelativeLayout>